@@ -24,6 +24,9 @@ def CALL_FUNCTION(op):         return dis.opname[op] == 'CALL_FUNCTION'
 def IMPORT_NAME(op):           return dis.opname[op] == 'IMPORT_NAME'
 def IMPORT_FROM(op):           return dis.opname[op] == 'IMPORT_FROM'
 def IMPORT_STAR(op):           return dis.opname[op] == 'IMPORT_STAR'
+def UNARY_POSITIVE(op):        return dis.opname[op] == 'UNARY_POSITIVE'
+def UNARY_NEGATIVE(op):        return dis.opname[op] == 'UNARY_NEGATIVE'
+def UNARY_INVERT(op):          return dis.opname[op] == 'UNARY_INVERT'
 def BINARY_SUBSCR(op):         return dis.opname[op] == 'BINARY_SUBSCR'
 def BINARY_ADD(op):            return dis.opname[op] == 'BINARY_ADD'
 def BUILD_LIST(op):            return dis.opname[op] == 'BUILD_LIST'
