@@ -1,0 +1,7 @@
+Processing test53...
+
+Warnings...
+
+test_input/test53.py:5: Operator (~~) doesn't exist, statement has no effect
+test_input/test53.py:7: Operator (--) doesn't exist, statement has no effect
+test_input/test53.py:9: Operator (++) doesn't exist, statement has no effect
